[project]
name = "acoustic-knowledge-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "librosa>=0.11.0",
    "opencv-python>=4.12.0.88",
    "pydub>=0.25.1",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
