[project]
name = "acoustic-knowledge-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "librosa>=0.11.0",
    "opencv-python>=4.12.0.88",
    "pydub>=0.25.1",
    "torch>=2.8.0",
    "statsmodels>=0.14.5",
    "pyha-analyzer",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.uv.sources]
pyha-analyzer = { git = "https://github.com/UCSD-E4E/pyha-analyzer-2.0.git" }
